# hcesc2021

./: .collabignore  .gitmodules  README.md  ignore.conf
.plastic/: plastic.branchexplorer  plastic.selector  plastic.wktree  plastic.workspace
Assets/Challenge 1/: Challenge 1.unity
Assets/Challenge 1/Scripts/: FollowPlayerX.cs  RotatePropeller.cs
Assets/Models/: hcesc_ohmni_robot_v2 v2.fbx
Assets/Scenes/: Prototype 1.unity  SampleScene.unity
Assets/Scripts/: FollowPlayer.cs  PlayerController.cs
OhmniUnityRosProject/Assets/CharacterModels/: Doctor.fbx  HazmatNurse.fbx
OhmniUnityRosProject/Assets/Materials/: OhmniMaterial.mat  OhmniTires.physicMaterial
OhmniUnityRosProject/Assets/Prefabs/: base_link.prefab  caster_wheel_link.prefab  right_wheel_link.prefab  tb_sim_prefab.prefab
OhmniUnityRosProject/Assets/Resources/: ROSConnectionPrefab.prefab
OhmniUnityRosProject/Assets/Scenes/: SampleScene.unity
OhmniUnityRosProject/Assets/Scripts/: FollowPlayer.cs  RosPublisherExample.cs  RosServiceCallExample.cs  (+2 more)
OhmniUnityRosProject/ProjectSettings/: ProjectSettings.asset
Ohmnilabs/: .gitignore
Ohmnilabs/Design Documents/: System Architecture Design Document.docx  ~$stem Architecture Design Document.docx
Ohmnilabs/Docker/: README.md
Ohmnilabs/URDF/modified/tb_description/: CMakeLists.txt  package.xml
Ohmnilabs/URDF/modified/tb_description/urdf/xacro/: imu.urdf.xacro  laser_range.urdf.xacro  nav_camera.urdf.xacro  tb_sim_simple.urdf.xacro
Ohmnilabs/Unity/: .gitignore
ProjectSettings/: ProjectSettings.asset  ProjectSettings.asset.private.0
(+2266 files in other folders)
