<?xml version="1.0"?>
<package format="2">
  <name>tb_description</name>
  <version>0.1.0</version>
  <description>The tb_description package</description>
  <maintainer email="nhattan@todo.todo">nhattan</maintainer>
  <license>Apache 2.0</license>
  <author >nhattan</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
